# task-flow-backend

./: Cargo.toml  README.md
settings/: dev.toml
src/: constants.rs  lib.rs  main.rs  server.rs
src/api/: auth.rs  mod.rs  openapi.rs  task.rs  user.rs
src/client/: mod.rs  postgres.rs
src/config/: auth.rs  mod.rs  postgres.rs  server.rs
src/dto/: auth.rs  error.rs  mod.rs  task.rs  user.rs
src/entity/: mod.rs  prelude.rs  sea_orm_active_enums.rs  task.rs  task_comment.rs  user.rs  user_avatar.rs
src/error/: client.rs  server.rs  service.rs
src/migration/: create_table_extension.rs  create_task_table.rs  create_user_table.rs  mod.rs
src/service/: auth.rs  common.rs  mod.rs  task.rs  task_comment.rs  user.rs  user_avatar.rs
